--- a/style.css
+++ b/style.css
@@ -1,252 +1,158 @@
 /* Grunnleggende til siden*/
-
+html {
+  font-size: 10px;
+  }
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    }
-
-p, h1, h2, h3 {
-    line-height: 1.5;
-}
-
-p {
-  font-family: 'Quicksand', sans-serif;
-  font-size: 18px;
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #0C4C71;
-  
-}
-
-h1 {
-    color: #0C4C71;
-    font-size: 52px;
-    font-family: 'Quicksand', sans-serif;
-    font-weight: 400;
-    word-wrap: break-word
-    }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  }
 
 body, html {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    color: #ffffff; /* body tekstfarge */
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size:18px;
-    }
-
-#main-header {
-
-    position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-    background-color: #ffffff; 
-    color: #0C4C71;     /* bildetekst og hamburgermeny */
-    width: 100%;
-    }
-
-.logo {
-flex: 1;
-max-width: 250px;
-}
-
-.logo img {
-  max-width: 100%;
-  height: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-left: 40px;
-    }
-
-.navbar {
-display: flex;
-align-items: center;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-    font-size: 16px;
-    gap: 20px;
-    margin-right: 40px;
-    }
-
-
-.navbar ul li{
-    display: inline; /*ved siden av hverandre*/
-    margin-right: auto;
-    position: relative;
-    }
-
-.navbar a {
-  text-decoration: none;
-  color: #0C4C71;
-  font-family: 'Quicksand', sans-serif;
-  font-size: 24px;
-  padding: 10px;
-  border-radius: 4px;
-  position: relative;
-  transition: background-color 0.3s;
-  }
-
-.navbar a:hover {
-  background-color: rgba(12, 76, 113, 0.5); /* Transparent petrol bakgrunn */
-  color: #ffffff; /* Endrer tekstfargen på hover */
-  }
-
-.navbar a.active {
-   
-    color: #0C4C71; 
-    font-weight: bold;
-    
-  }
-
-.navbar ul li:not(:last-child) a::after { /*strekene mellom menynavn */
-  content: "";
-  position: relative;
-  top: 20%;
-  right: -20px; /* plasserer streken til høyre for lenken */
-  height: 70%; /*juster høyden etter behov*/
-  border-right: 1px solid #6C9BB6;
-  transform: translateY(-50%); /* Sentrer vertikalt */
-  }
-
-
-.showcase {
-     /*line-height: 0; */
-  position: relative;
   margin: 0;
   padding: 0;
   width: 100%;
-}
-
-.showcase img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  
+  height: 100%;
   }
 
+p, h1, h2, h3 {
+  line-height: 1.5;
+  }
 
-.email {
+p {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 1.6rem;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #0C4C71;
+  }
+
+h1 {
+  color: #0C4C71;
+  font-size: 2.4rem;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  word-wrap: break-word
+  }
+
+  .email {
   color: #870808;
-}
+  }
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  color: #0C4C71; /* body tekstfarge */
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:18px;
+  }
+
+  #main-header {
+    display: flex;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff; 
+    color: #0C4C71;     /* bildetekst og hamburgermeny */
+    width: 100%;
+    height: 120px;
+    border-bottom: #0C4C71 solid 2px;
+    }
+    .logo-container {
+      display: flex;
+      align-items: center;
+    }
+
+    .logo {
+      flex: 1;
+      max-width: 250px;
+      }
+
+      .logo img {
+        max-width: 50%;
+        height: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin-left: 40px;
+        }
+
+    .navbar {
+    display: flex;
+    align-items: center;
+    padding-right: 20px;
+    }
+
+      .navbar ul {
+        list-style: none;
+        display: flex;
+        font-size: 16px;
+        gap: 20px;
+        margin-right: 40px;
+        }
+
+      .navbar ul li{
+        display: inline; /*ved siden av hverandre*/
+        margin-right: auto;
+        position: relative;
+        }
+
+      .navbar a {
+      text-decoration: none;
+      color: #0C4C71;
+      font-family: 'Quicksand', sans-serif;
+      font-size: 2rem;
+      padding: 10px;
+      border-radius: 4px;
+      position: relative;
+      transition: background-color 0.3s;
+      }
+
+      .navbar a:hover {
+      background-color: rgba(12, 76, 113, 0.5); /* Transparent petrol bakgrunn */
+      color: #ffffff; /* Endrer tekstfargen på hover */
+      }
+
+      .navbar a.active {
+        color: #0C4C71; 
+        font-weight: bold; 
+        }
+
+      .navbar ul li:not(:last-child) a::after { /*strekene mellom menynavn */
+        content: "";
+        position: relative;
+        top: 20%;
+        right: -20px; /* plasserer streken til høyre for lenken */
+        height: 70%; /*juster høyden etter behov*/
+        border-right: 1px solid #6C9BB6;
+        transform: translateY(-50%); /* Sentrer vertikalt */
+        }
 
 main {
-
-    flex: 1; /*main tar opp all tilgjengelig plass, flytter footeren som kommer etter helt ned på siden når innholdet er mindre enn skjermen */
-    padding: 20px; /*luft mellom innholdet og kanten på innholdet */
-    background-color: #6C9BB6;
-    text-align: center;
-}
+  flex: 1; /*main tar opp all tilgjengelig plass, flytter footeren som kommer etter helt ned på siden når innholdet er mindre enn skjermen */
+  padding: 170px 20px 40px 20px; /* Padding like stor som headeren, 20 på sidene og 40 nede */
+  background-color: #f5f5f5;
+  text-align: center;
+  }
 
 footer {
-    padding: 15px;
-font-size: x-small;
-margin: 0;
-width: 100%;
-box-sizing: border-box;
-background-color: #ffffff;
-text-align: center;
+  padding: 15px;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: #061c29;
+  text-align: center;
+  }
 
-}
-
-footer p {
-  padding: 10px;
-}
-
-
-
-
-
-    /* Grunnleggende stil for galleriet */
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 10px;
-    padding: 20px;
-    background-color: #0C4C71;
-}
-
-.gallery-item {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
-
-.gallery-item:hover {
-    transform: scale(1.05);
-}
-
-/* Stil for bildefremvisning */
-.lightbox {
-    display: none;
-    position: fixed;
-    z-index: 999;
-    padding-top: 60px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.lightbox-content {
-    margin: auto;
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
-}
-
-.lightbox-content {
-    animation: zoom 0.6s;
-}
-
-@keyframes zoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-}
-
-.close {
-    position: absolute;
-    top: 25px;
-    right: 30px;
-    color: #fff;
-    font-size: 35px;
-    font-weight: bold;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-}
+  footer p {
+    font-size: 1rem;
+    color: #ffffff;
+    padding: 10px;
+    }
 
 /* mobilvisning */
 
@@ -254,7 +160,7 @@ footer p {
   display: none;
   font-size: 30px;
   cursor: pointer;
-}
+  }
 
 .mobile-menu {
   display: none;
@@ -264,127 +170,90 @@ footer p {
   background-color: #061c29;
   width: 100%;
   padding: 35px;
-  border-bottom-left-radius: 20px; /* mykt hjørne nede venstre på menyen*/
   z-index: 1;
-}
+  }
+
 .mobile-menu ul {
   list-style: none;
   padding: 0;
-  
-}
+  }
+
 .mobile-menu li {
   margin-bottom: 30px;
-}
+  }
 
 .mobile-menu a {
-  
   color: #ffffff;
   text-decoration: none;
   font-size: 16px;
-}
+  }
 
 .mobile-menu a:hover,
 .mobile-menu a:focus,
 .mobile-menu a:active {
   text-decoration: underline;
-}
+  }
 
 @media (max-width: 1060px) {
-  h1 {
-    font-size: 36px;
-    padding: 80px;
+h1 {
+  font-size: 2.4rem;
+  padding: 50px;
   }
+  .navbar a {
+    font-size: 1.6rem;
+}
+.logo img {
+  max-width: 100px;
+}
 }
 
-    @media (max-width: 768px) {
-        margin: 0;
-
-        .gallery {
-            grid-template-columns: 
-            width: 100%; /* En boks per rad */
-              margin: 10px 0;
-              /*repeat(auto-fit, minmax(100px, 1fr));*/
-      
-        }
-      
-        .lightbox-content {
-            max-width: 90%;
-            max-height: 70%;
-        }
-      
-        #caption {
-            font-size: 14px;
-        }
-      
-        .logo img {
-        max-width: 70%;
-        height: auto;
-          padding-top: 10px;
-          padding-bottom: 10px;
-          margin-left: 20px;
-          }
-
-        .navbar {
-          display: none;
-          
-        }
-      
-        .hamburger {
-          display: block; /* vis hamburgerikonet på mobil*/
-        }
 
 
-        .mobile-menu.show {
-          display: block; /* vis mobilmeny når den er aktivert*/
-          
-        }
 
-        #main-header {
-          height: 200px;  
-        }
-        
 
-        .om-side .showcase img,
-        .kontakt-side .showcase img {
-          display: none;
-          }
-        
-        .om-side .overlay,
-        .kontakt-side .overlay {
-          background-color: #956242;
-          height: 600px;
-        }
-        
-        .om-side .showcase,
-        .kontakt-side .showcase {
-          background-color: transparent;
-        }
+@media (max-width: 880px) {
+  h1 {
+    font-size: 2.4rem;
+    padding: 40px;
+    }
 
-        #forsidebilde {
-          width: auto;
-        }  
+  h2 {
+    font-size: 2rem;
+    }
 
-        h1 {
-          font-size: 28px;
-          padding: 40px;
-        }
-        p {
-          font-size: 20px;
-        }
+  p {
+    font-size: 1.8rem;
+    }
+  
+  .logo img {
+    max-width: 100px;
+    height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 20px;
+    }
 
-        .product-box {
-          width: 100%; /* En boks per rad */
-          margin: 10px 0;
+  .navbar {
+    display: none;
+    }
+    
+  .hamburger {
+    display: block; /* vis hamburgerikonet på mobil*/
+    }
+
+  .mobile-menu.show {
+    display: block; /* vis mobilmeny når den er aktivert*/  
+    }
+
+  footer {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    }
+
+    footer p {
+      font-size: 1rem;
+      padding: 5px;
       }
-      
-        footer {
-          padding-top: 15px;
-          padding-bottom: 15px;
-        }
-        footer p {
-          font-size: 10px;
-          padding: 5px;
-        }
-      }
-      
+    }
+    
 
